[package]
name = "ctk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
chrono = "0.4"
shlex = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "6.0"
rand = "0.8.5"
dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
walkdir = "2.3.2"
sublime_fuzzy = "0.7.0"
indicatif = "0.16.2"
