[package]
name = "ctk"
version = "0.4.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
chrono = "0.4"
shlex = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
dialoguer = { version = "0.10.0", features = ["history"] }
walkdir = "2.3.2"
sublime_fuzzy = "0.7.0"
indicatif = { version = "0.16.2", features = ["rayon"] }
zeroize = "1.5.7"
rayon = "1.5.3"
colour = "0.6.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
ctk_common = { path = "./ctk_common" }

[build-dependencies]
clap_complete = "4.3.2"
clap = { version = "4.3.19", features = ["derive"] }
ctk_common = { path = "./ctk_common" }
